# gitlab-mr-auto-review

./: .gitignore  README.md  pyproject.toml  requirements.txt  update_fake_session.py
docs/: review-principles.md
docs/plans/: 2026-03-02-gitlab-mr-auto-review-design.md  2026-03-12-update-comments-plan.md  2026-03-12-update-existing-gitlab-comments-design.md
src/mr_auto_reviewer/: ai_reviewer.py  feishu_client.py  gitlab_client.py  main.py  models.py  openclaw_reviewer.py  pipeline.py  related_code_loader.py  reporting.py  review_principles.py  state_store.py
tests/: test_feishu_client.py  test_gitlab_client.py  test_launchd_compat.py  test_main.py  test_openclaw_reviewer.py  test_pipeline.py  test_related_code_loader.py  test_reporting.py  test_review_principles_loading.py
